<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddRecord">

    <TextView
        android:id="@+id/label_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empl_id"
        tools:text="@string/empl_id" />

    <EditText
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/label_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_first_name"
        tools:text="@string/label_first_name" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/label_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_last_name"
        tools:text="@string/label_last_name" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/label_insurance_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_insurance_status"
        tools:text="@string/label_insurance_status" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:textOff="not insured"
        android:textOn="insured" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        tools:text="@string/btn_save" />
</LinearLayout>